force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/Int_OLMN_Accounting_Entry__c.object-meta.xml
<CustomObject>
    <description>This contains interface account entry subledger information headed to newco oracle</description>
    <label>Int OLMN Accounting Entry</label>
    <nameField>
        <displayFormat>AE-{00000000}</displayFormat>
        <label>Int OLMN Accounting Entrie Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int OLMN Accounting Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>