force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/fields/Accounted_Cr__c.field-meta.xml
<CustomField>
    <fullName>Accounted_Cr__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Accounted Cr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>