force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/fields/Accounting_Date__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Date__c</fullName>
    <label>Accounting Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>