force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/fields/Batch_Description__c.field-meta.xml
<CustomField>
    <fullName>Batch_Description__c</fullName>
    <label>Batch Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>