force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/fields/Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Name__c</fullName>
    <label>Batch_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>