force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/fields/Concatenated_Segments__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_Segments__c</fullName>
    <label>Concatenated Segments</label>
    <length>50</length>
    <type>Text</type>
</CustomField>