force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <label>Contract Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>