force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/fields/Fin_Product__c.field-meta.xml
<CustomField>
    <fullName>Fin_Product__c</fullName>
    <label>Fin Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>