force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/fields/Foreign_SubSystem_Id__c.field-meta.xml
<CustomField>
    <fullName>Foreign_SubSystem_Id__c</fullName>
    <label>Foreign SubSystem ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>