force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/fields/GL_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>GL_Entry_Id__c</fullName>
    <label>GL Entry Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>