force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/fields/Journal_Category_Desc__c.field-meta.xml
<CustomField>
    <fullName>Journal_Category_Desc__c</fullName>
    <label>Journal Category Desc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>