force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/fields/Journal_Entry_Number__c.field-meta.xml
<CustomField>
    <fullName>Journal_Entry_Number__c</fullName>
    <description>This is a link between GL Consolidation and GL Subledgers</description>
    <label>Journal Entry Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>