force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/fields/Journal_Source__c.field-meta.xml
<CustomField>
    <fullName>Journal_Source__c</fullName>
    <label>Journal Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>