force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/fields/Period_Name__c.field-meta.xml
<CustomField>
    <fullName>Period_Name__c</fullName>
    <label>Period Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>