force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/fields/Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Posting_Date__c</fullName>
    <label>Posting Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>