force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/fields/Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Number__c</fullName>
    <label>Transaction Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>