force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/fields/Transaction_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Sub_Type__c</fullName>
    <description>This field helps in storing Fee&#39;s name when type is charge. This is interface table mapping field.</description>
    <inlineHelpText>This field helps in storing Fee&#39;s name when type is charge.This is interface table mapping field.</inlineHelpText>
    <label>Transaction Sub-Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>