force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/fields/Vendor_Program__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program__c</fullName>
    <label>Vendor Program</label>
    <length>100</length>
    <type>Text</type>
</CustomField>