force-app/main/default/objects/Int_OLMN_Accounting_Entry__c/listViews/All0119.listView-meta.xml
<ListView>
    <fullName>All0119</fullName>
    <columns>Month__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Committed__c</columns>
    <columns>Contract_Number__c</columns>
    <columns>Journal_Category__c</columns>
    <columns>Accounted_Cr__c</columns>
    <columns>Accounted_Dr__c</columns>
    <columns>Accounting_Date__c</columns>
    <columns>Period_Name__c</columns>
    <columns>Batch_Description__c</columns>
    <columns>Posting_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Posting_Date__c</field>
        <operation>equals</operation>
        <value>20181231</value>
    </filters>
    <label>All0119</label>
</ListView>